<resources>
    <string name="app_name">SJSULookout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="signup">Sign Up</string>
    <string name="signout">Sign Out</string>
    <string name="title">Title</string>
    <string name="place">Location</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="date_ex">xx/xx/xx</string>
    <string name="time_ex">xx:xx XM</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="contents">Type to add content...</string>
    <string name="add_event">Add Event</string>
    <string name="name">Name</string>
    <string name="menu_item2">User Events</string>
    <string name="menu_item1">Explore Events</string>
    <string name="menu_item3">Add Events</string>
    <string name="menu_item4">Sign Out</string>
    <string name="dash_mark">-</string>
</resources>
