<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/MyHome"
            android:icon="@drawable/ic_menu_home"
            android:title="My Home" />
        <item
            android:id="@+id/Discover"
            android:icon="@drawable/ic_menu_discover"
            android:title="Discover" />
        <item
            android:id="@+id/UserEvents"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/menu_item2" />
        <item
            android:id="@+id/attendingEvents"
            android:icon="@drawable/ic_menu_attendingevent"
            android:title="Attending Events" />
        <item
            android:id="@+id/AddEvents"
            android:icon="@drawable/ic_menu_event"
            android:title="@string/menu_item3" />
        <item
            android:id="@+id/signOut"
            android:icon="@drawable/ic_menu_signout"
            android:title="@string/menu_item4" />
    </group>
</menu>